Updated to make it more carnegie like

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/favicon-32x32@1x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Azure AI</title>
+    <script type="module">
+      import {Buffer} from "buffer";
+      window.Buffer = Buffer;
+    </script>
+    <title>Carnegie AI</title>
   </head>
   <body>
     <div id="root"></div>
