--- a/frontend/sarthak.html
+++ b/frontend/sarthak.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/eic-arrow-logo-dark-1.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sarthak</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <div><h1>Sarthak</h1></div>
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
+</html>
