changes for fae

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/eic-arrow-logo-dark-1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copilot for FAE</title>
+    <title>Copilot for FAE BOT</title>
   </head>
   <body>
     <div id="root"></div>
+    <div><h1>Sarthak</h1></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
