--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
+<script>
+    function initialize() {
+        fetch("index.json")
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("aoai-Title").innerText = data.aoaiTitle;
+            }
+    }
+
+    window.onload = initialize;
+</script>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OCTO AI</title>
+    <title id="aoai-Title">VA Enterprise GenAI Chat</title>
   </head>
   <body>
     <div id="root"></div>
