runs with responses

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Deepak copilot experience</title>
+    <title>Ask Deepak</title>
   </head>
   <body>
     <div id="root"></div>
