--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="{{ favicon }}" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copilot</title>
+    <title>Bass Pro</title>
   </head>
   <body>
     <div id="root"></div>
