Add GA4 error logging, show error on prompt length too long

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,16 @@
     <!-- Google Tag Manager to be place in HEAD -->
     <script>
       ;(function (w, d, s, l, i) {
-        w[l] = w[l] || []
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : ''
-        j.async = true
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-        f.parentNode.insertBefore(j, f)
+        if (d.location.hostname === 'ai-assistant.nj.gov') {
+          w[l] = w[l] || []
+          w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+          var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : ''
+          j.async = true
+          j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+          f.parentNode.insertBefore(j, f)
+        }
       })(window, document, 'script', 'dataLayer', 'GTM-P3V3PJ6')
     </script>
     <!-- End Google Tag Manager -->
